--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
             </a>
             <!-- card-2  -->
             <a href="catalog.html" class="categories__card categories__card1 shadow trans">
-               <img class="categories-wrap__img scale trans" src="img/main/categories-men.jpg" alt="man">
+               <img class="categories-card__img scale trans" src="img/main/categories-men.jpg" alt="man">
                <div class="categories-card__wrap">
                   <h5 class="categories-wrap__h5">HOT DEAL</h5>
                   <h3 class="categories-wrap__h3">FOR MEN</h3>
@@ -136,7 +136,7 @@
             </a>
             <!-- card-3  -->
             <a href="#" class="categories__card categories__card1 shadow trans">
-               <img class="categories-wrap__img scale trans" src="img/main/categories-kids.jpg" alt="kids">
+               <img class="categories-card__img scale trans" src="img/main/categories-kids.jpg" alt="kids">
                <div class="categories-card__wrap">
                   <h5 class="categories-wrap__h5">NEW ARRIVALS</h5>
                   <h3 class="categories-wrap__h3">FOR KIDS</h3>
@@ -144,7 +144,7 @@
             </a>
             <!-- card-4  -->
             <a href="#" class="categories__card categories__card4 shadow trans">
-               <img class="categories-wrap__img scale trans" src="img/main/categories-accesories.jpg" alt="accesories">
+               <img class="categories-card__img scale trans" src="img/main/categories-accesories.jpg" alt="accesories">
                <div class="categories-card__wrap">
                   <h5 class="categories-wrap__h5">LUXIROUS & TRENDY</h5>
                   <h3 class="categories-wrap__h3">ACCESORIES</h3>
@@ -368,7 +368,7 @@
          <div class="subscribe__wrap container">
             <!-- Subscribe info -->
             <div class="subscribe__info">
-               <img class="subscribe-info__img" src="img/header-footer/footer-avatar.png" width="96" height="96"
+               <img class="subscribe-info__img rotate trans2" src="img/header-footer/footer-avatar.png" width="96" height="96"
                   alt="avatar">
                <h4 class="subscribe-info__h4">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
                      class="subscribe-info__h4-span">a pulvinar
