update all pages and media queries

--- a/cart.html
+++ b/cart.html
@@ -108,7 +108,7 @@
    <!-- Mian  -->
    <main class="main">
       <!-- New arrivals -->
-      <aside class="arrivals">
+      <aside class="arrivals pb-69">
          <div class="arrivals__wrap container">
             <h3 class="arrivals__h3">SHOPPING CART</h3>
          </div>
