--- a/catalog.html
+++ b/catalog.html
@@ -108,9 +108,9 @@
    <!-- Main  -->
    <main class="main">
       <!-- New arrivals -->
-      <aside class="arrivals">
+      <aside class="arrivals pb-46">
          <div class="arrivals__wrap container">
-            <h3 class="arrivals__h3">NEW ARRIVALS </h3>
+            <h3 class="arrivals__h3 arrivals__h3--pb">NEW ARRIVALS </h3>
             <ul class="arrivals__breadcrumbs">
                <li class="arrivals-breadcrumbs__list"><a class="arrivals-breadcrumbs__link link-hover trans"
                      href="index.html">Home</a>
