--- a/index.html
+++ b/index.html
@@ -119,32 +119,40 @@
       <section class="categories">
          <article class="container categories__wrap">
             <!-- card-1  -->
-            <a href="#" class="categories__card categories__card1 shadow trans">
-               <img class="categories-card__img scale trans" src="img/main/categories-women.jpg" alt="woman">
+            <a href="#" class="categories__card categories__card1 shadow trans1 {
+               ">
+               <img class="categories-card__img scale trans1 {
+                  " src="img/main/categories-women.jpg" alt="woman">
                <div class="categories-card__wrap">
                   <h5 class="categories-wrap__h5">30% OFF</h5>
                   <h3 class="categories-wrap__h3">FOR WOMEN</h3>
                </div>
             </a>
             <!-- card-2  -->
-            <a href="catalog.html" class="categories__card categories__card1 shadow trans">
-               <img class="categories-card__img scale trans" src="img/main/categories-men.jpg" alt="man">
+            <a href="catalog.html" class="categories__card categories__card1 shadow trans1 {
+               ">
+               <img class="categories-card__img scale trans1 {
+                  " src="img/main/categories-men.jpg" alt="man">
                <div class="categories-card__wrap">
                   <h5 class="categories-wrap__h5">HOT DEAL</h5>
                   <h3 class="categories-wrap__h3">FOR MEN</h3>
                </div>
             </a>
             <!-- card-3  -->
-            <a href="#" class="categories__card categories__card1 shadow trans">
-               <img class="categories-card__img scale trans" src="img/main/categories-kids.jpg" alt="kids">
+            <a href="#" class="categories__card categories__card1 shadow trans1 {
+               ">
+               <img class="categories-card__img scale trans1 {
+                  " src="img/main/categories-kids.jpg" alt="kids">
                <div class="categories-card__wrap">
                   <h5 class="categories-wrap__h5">NEW ARRIVALS</h5>
                   <h3 class="categories-wrap__h3">FOR KIDS</h3>
                </div>
             </a>
             <!-- card-4  -->
-            <a href="#" class="categories__card categories__card4 shadow trans">
-               <img class="categories-card__img scale trans" src="img/main/categories-accesories.jpg" alt="accesories">
+            <a href="#" class="categories__card categories__card4 shadow trans1 {
+               ">
+               <img class="categories-card__img scale trans1 {
+                  " src="img/main/categories-accesories.jpg" alt="accesories">
                <div class="categories-card__wrap">
                   <h5 class="categories-wrap__h5">LUXIROUS & TRENDY</h5>
                   <h3 class="categories-wrap__h3">ACCESORIES</h3>
