--- a/product.html
+++ b/product.html
@@ -147,7 +147,7 @@
                <p class="product-description__h5">WOMEN COLLECTION</p>
                <h4 class="product-description__h4">Moschino Cheap And Chic</h4>
                <p class="product-description__text">Compellingly actualize fully researched processes before proactive
-                  outsourcing. <br> Progressively syndicate collaborative architectures before cutting-edge services.
+                  outsourcing. Progressively syndicate collaborative architectures before cutting-edge services.
                   Completely
                   visualize parallel core competencies rather than exceptional portals. </p>
                <h3 class="product-description__h3">$561</h3>
@@ -187,7 +187,7 @@
                      </div>
                   </details>
                   <details class="product-sort__details product-sort__details--quantity">
-                     <summary class="product-sort__summary">QUANTITY</summary>
+                     <summary class="product-sort__summary mr-0">QUANTITY</summary>
                      <div class="product-sort__position">
                         <input class="product-sort__label-input product-sort--quantity input-hover trans" type="number"
                            value="1" min="1" required name="quantity">
@@ -209,7 +209,7 @@
             </form>
          </article>
          <!-- Product  -->
-         <article class="product__grid-wrap container">
+         <article class="product__grid-wrap mt-129 container">
             <!-- Card-1  -->
             <a href="product.html" class="product__card shadow filter-card trans">
                <img src="img/product/product-preview1.jpg" width="360" height="420" alt="product card"
@@ -255,7 +255,7 @@
                <!-- Hover for card img END -->
             </a>
             <!-- Card-3  -->
-            <a href="product.html" class="product__card shadow filter-card trans">
+            <a href="product.html" class="product__card shadow product__card--none filter-card trans">
                <img src="img/product/product-preview3.jpg" width="360" height="420" alt="product card"
                   class="product-card__img trans">
                <div class="product-card__name">
