--- a/index.html
+++ b/index.html
@@ -376,8 +376,8 @@
          <div class="subscribe__wrap container">
             <!-- Subscribe info -->
             <div class="subscribe__info">
-               <img class="subscribe-info__img" src="img/header-footer/footer-avatar.png" width="96"
-                  height="96" alt="avatar">
+               <img class="subscribe-info__img" src="img/header-footer/footer-avatar.png" width="96" height="96"
+                  alt="avatar">
                <h4 class="subscribe-info__h4">“Vestibulum quis porttitor dui! Quisque viverra nunc mi, <span
                      class="subscribe-info__h4-span">a pulvinar
                      purus condimentum“</span></h4>
