--- a/cart.html
+++ b/cart.html
@@ -103,7 +103,8 @@
                <a href="#" class="header-drop__item-link link-hover trans">Bags</a>
             </li>
             <li class="header-drop__item">
-               <a href="registration.html" class="header-drop__item-title burger__media menu-title-hover trans">Account</a>
+               <a href="registration.html"
+                  class="header-drop__item-title burger__media menu-title-hover trans">Account</a>
             </li>
             <li class="header-drop__item">
                <a href="cart.html" class="header-drop__item-title burger__media menu-title-hover trans">Cart</a>
@@ -168,7 +169,7 @@
                   </div>
                   <!-- close button -->
                   <button type="submit" class="shopping-card__close">
-                     <svg class="close trans" width="18" height="18" viewBox="0 0 18 18" fill="#575757"
+                     <svg class="close trans" width="9" height="9" viewBox="0 0 18 18" fill="#575757"
                         xmlns="http://www.w3.org/2000/svg">
                         <path
                            d="M11.2453 9L17.5302 2.71516C17.8285 2.41741 17.9962 2.01336 17.9966 1.59191C17.997 1.17045 17.8299 0.76611 17.5322 0.467833C17.2344 0.169555 16.8304 0.00177586 16.4089 0.00140366C15.9875 0.00103146 15.5831 0.168097 15.2848 0.465848L9 6.75069L2.71516 0.465848C2.41688 0.167571 2.01233 0 1.5905 0C1.16868 0 0.764125 0.167571 0.465848 0.465848C0.167571 0.764125 0 1.16868 0 1.5905C0 2.01233 0.167571 2.41688 0.465848 2.71516L6.75069 9L0.465848 15.2848C0.167571 15.5831 0 15.9877 0 16.4095C0 16.8313 0.167571 17.2359 0.465848 17.5342C0.764125 17.8324 1.16868 18 1.5905 18C2.01233 18 2.41688 17.8324 2.71516 17.5342L9 11.2493L15.2848 17.5342C15.5831 17.8324 15.9877 18 16.4095 18C16.8313 18 17.2359 17.8324 17.5342 17.5342C17.8324 17.2359 18 16.8313 18 16.4095C18 15.9877 17.8324 15.5831 17.5342 15.2848L11.2453 9Z" />
@@ -192,27 +193,26 @@
             <div class="shopping__delivery">
                <h5 class="shopping__h5">Shopping Adress</h5>
                <!-- Сountry selection -->
-                  <datalist id="country" class="shopping-delivery__adress"
-                     name="st.country">
-                     <option value="Bangladesh">Bangladesh</option>
-                     <option value="Россия">Россия</option>
-                     <option value="Австралия">Австралия</option>
-                     <option value="Австрия">Австрия</option>
-                     <option value="Ангилья">Ангилья</option>
-                     <option value="Багамские острова">Багамские острова</option>
-                     <option value="Босния/Герцеговина">Босния/Герцеговина</option>
-                     <option value="Венгрия">Венгрия</option>
-                     <option value="Гаити">Гаити</option>
-                     <option value="Гонконг">Гонконг</option>
-                     <option value="Кипр">Кипр</option>
-                     <option value="Мальдивские острова">Мальдивские острова</option>
-                     <option value="О.А.Э.">О.А.Э.</option>
-                     <option value="Эстония">Эстония</option>
-                     <option value="Эфиопия">Эфиопия</option>
-                     <option value="ЮАР">ЮАР</option>
-                     <option value="Япония">Япония</option>
-                  </datalist>
-                  <input class="shopping-delivery__adress input-hover" type="text" list="country" placeholder="Bangladesh">
+               <datalist id="country" class="shopping-delivery__adress" name="st.country">
+                  <option value="Bangladesh">Bangladesh</option>
+                  <option value="Россия">Россия</option>
+                  <option value="Австралия">Австралия</option>
+                  <option value="Австрия">Австрия</option>
+                  <option value="Ангилья">Ангилья</option>
+                  <option value="Багамские острова">Багамские острова</option>
+                  <option value="Босния/Герцеговина">Босния/Герцеговина</option>
+                  <option value="Венгрия">Венгрия</option>
+                  <option value="Гаити">Гаити</option>
+                  <option value="Гонконг">Гонконг</option>
+                  <option value="Кипр">Кипр</option>
+                  <option value="Мальдивские острова">Мальдивские острова</option>
+                  <option value="О.А.Э.">О.А.Э.</option>
+                  <option value="Эстония">Эстония</option>
+                  <option value="Эфиопия">Эфиопия</option>
+                  <option value="ЮАР">ЮАР</option>
+                  <option value="Япония">Япония</option>
+               </datalist>
+               <input class="shopping-delivery__adress input-hover" type="text" list="country" placeholder="Bangladesh">
                <!-- State ​​selection -->
                <input type="text" class="shopping-delivery__adress shopping-delivery__color input-hover" required
                   placeholder="State">
