edit cards, fix media for hover

--- a/cart.html
+++ b/cart.html
@@ -193,7 +193,7 @@
             <div class="shopping__delivery">
                <h5 class="shopping__h5">Shopping Adress</h5>
                <!-- Сountry selection -->
-               <datalist id="country" class="shopping-delivery__adress" name="st.country">
+               <datalist id="country" class="shopping-delivery__adress">
                   <option value="Bangladesh">Bangladesh</option>
                   <option value="Россия">Россия</option>
                   <option value="Австралия">Австралия</option>
