--- a/catalog.html
+++ b/catalog.html
@@ -239,15 +239,15 @@
 
             <article class="product__grid-wrap product__grid-wrap--catalog">
                <!-- Card-1  -->
-               <a href="product.html" class="product__card shadow filter-card trans">
+               <div class="product__card shadow filter-card trans">
                   <img src="img/catalog/product-card1.jpg" width="360" height="420" alt="product card trans"
                      class="product-card__img">
-                  <div class="product-card__name">
+                  <a href="product.html" class="product-card__name">
                      <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                      <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                      <p class="product-card__text-options">$52.00</p>
-                  </div>
+                  </a>
                   <!-- Hover for card img  -->
                   <button class="card-hover button-hover4 trans1">
                      <svg class="card-hover__img trans" width="26" height="24" viewBox="0 0 32 29" fill="none"
@@ -259,17 +259,17 @@
                      <span class="card-hover__text trans">Add to Cart</span>
                   </button>
                   <!-- Hover for card img END -->
-               </a>
+               </div>
                <!-- Card-2  -->
-               <a href="product.html" class="product__card shadow filter-card trans">
+               <div class="product__card shadow filter-card trans">
                   <img src="img/catalog/product-card2.jpg" width="360" height="420" alt="product card trans"
                      class="product-card__img">
-                  <div class="product-card__name">
+                  <a href="product.html" class="product-card__name">
                      <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                      <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                      <p class="product-card__text-options">$52.00</p>
-                  </div>
+                  </a>
                   <!-- Hover for card img  -->
                   <button class="card-hover button-hover4 trans1">
                      <svg class="card-hover__img trans" width="26" height="24" viewBox="0 0 32 29" fill="none"
@@ -281,17 +281,17 @@
                      <span class="card-hover__text trans">Add to Cart</span>
                   </button>
                   <!-- Hover for card img END -->
-               </a>
+               </div>
                <!-- Card-3  -->
-               <a href="product.html" class="product__card shadow filter-card trans">
+               <div class="product__card shadow filter-card trans">
                   <img src="img/catalog/product-card3.jpg" width="360" height="420" alt="product card trans"
                      class="product-card__img">
-                  <div class="product-card__name">
+                  <a href="product.html" class="product-card__name">
                      <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                      <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                      <p class="product-card__text-options">$52.00</p>
-                  </div>
+                  </a>
                   <!-- Hover for card img  -->
                   <button class="card-hover button-hover4 trans1">
                      <svg class="card-hover__img trans" width="26" height="24" viewBox="0 0 32 29" fill="none"
@@ -303,17 +303,17 @@
                      <span class="card-hover__text trans">Add to Cart</span>
                   </button>
                   <!-- Hover for card img END -->
-               </a>
+               </div>
                <!-- Card-4  -->
-               <a href="product.html" class="product__card shadow filter-card trans">
+               <div class="product__card shadow filter-card trans">
                   <img src="img/catalog/product-card4.jpg" width="360" height="420" alt="product card trans"
                      class="product-card__img">
-                  <div class="product-card__name">
+                  <a href="product.html" class="product-card__name">
                      <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                      <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                      <p class="product-card__text-options">$52.00</p>
-                  </div>
+                  </a>
                   <!-- Hover for card img  -->
                   <button class="card-hover button-hover4 trans1">
                      <svg class="card-hover__img trans" width="26" height="24" viewBox="0 0 32 29" fill="none"
@@ -325,17 +325,17 @@
                      <span class="card-hover__text trans">Add to Cart</span>
                   </button>
                   <!-- Hover for card img END -->
-               </a>
+               </div>
                <!-- Card-5  -->
-               <a href="product.html" class="product__card shadow filter-card trans">
+               <div class="product__card shadow filter-card trans">
                   <img src="img/catalog/product-card5.jpg" width="360" height="420" alt="product card trans"
                      class="product-card__img">
-                  <div class="product-card__name">
+                  <a href="product.html" class="product-card__name">
                      <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                      <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                      <p class="product-card__text-options">$52.00</p>
-                  </div>
+                  </a>
                   <!-- Hover for card img  -->
                   <button class="card-hover button-hover4 trans1">
                      <svg class="card-hover__img trans" width="26" height="24" viewBox="0 0 32 29" fill="none"
@@ -347,17 +347,17 @@
                      <span class="card-hover__text trans">Add to Cart</span>
                   </button>
                   <!-- Hover for card img END -->
-               </a>
+               </div>
                <!-- Card-6  -->
-               <a href="product.html" class="product__card shadow filter-card trans">
+               <div class="product__card shadow filter-card trans">
                   <img src="img/catalog/product-card6.jpg" width="360" height="420" alt="product card trans"
                      class="product-card__img">
-                  <div class="product-card__name">
+                  <a href="product.html" class="product-card__name">
                      <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                      <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                      <p class="product-card__text-options">$52.00</p>
-                  </div>
+                  </a>
                   <!-- Hover for card img  -->
                   <button class="card-hover button-hover4 trans1">
                      <svg class="card-hover__img trans" width="26" height="24" viewBox="0 0 32 29" fill="none"
@@ -369,17 +369,17 @@
                      <span class="card-hover__text trans">Add to Cart</span>
                   </button>
                   <!-- Hover for card img END -->
-               </a>
+               </div>
                <!-- Card-7  -->
-               <a href="product.html" class="product__card shadow filter-card trans">
+               <div class="product__card shadow filter-card trans">
                   <img src="img/catalog/product-card7.jpg" width="360" height="420" alt="product card trans"
                      class="product-card__img">
-                  <div class="product-card__name">
+                  <a href="product.html" class="product-card__name">
                      <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                      <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                      <p class="product-card__text-options">$52.00</p>
-                  </div>
+                  </a>
                   <!-- Hover for card img  -->
                   <button class="card-hover button-hover4 trans1">
                      <svg class="card-hover__img trans" width="26" height="24" viewBox="0 0 32 29" fill="none"
@@ -391,17 +391,17 @@
                      <span class="card-hover__text trans">Add to Cart</span>
                   </button>
                   <!-- Hover for card img END -->
-               </a>
+               </div>
                <!-- Card-8  -->
-               <a href="product.html" class="product__card shadow filter-card trans">
+               <div class="product__card shadow filter-card trans">
                   <img src="img/catalog/product-card8.jpg" width="360" height="420" alt="product card trans"
                      class="product-card__img">
-                  <div class="product-card__name">
+                  <a href="product.html" class="product-card__name">
                      <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                      <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                      <p class="product-card__text-options">$52.00</p>
-                  </div>
+                  </a>
                   <!-- Hover for card img  -->
                   <button class="card-hover button-hover4 trans1">
                      <svg class="card-hover__img trans" width="26" height="24" viewBox="0 0 32 29" fill="none"
@@ -413,17 +413,17 @@
                      <span class="card-hover__text trans">Add to Cart</span>
                   </button>
                   <!-- Hover for card img END -->
-               </a>
+               </div>
                <!-- Card-9  -->
-               <a href="product.html" class="product__card product__card--none shadow filter-card trans ">
+               <div class="product__card product__card--none shadow filter-card trans ">
                   <img src="img/catalog/product-card9.jpg" width="360" height="420" alt="product card"
                      class="product-card__img trans">
-                  <div class="product-card__name">
+                  <a href="product.html" class="product-card__name">
                      <h5 class="product-card__h5">ELLERY X M'O CAPSULE</h5>
                      <p class="product-card__text">Known for her sculptural takes on traditional tailoring, Australian
                         arbiter of cool Kym Ellery teams up with Moda Operandi.</p>
                      <p class="product-card__text-options">$52.00</p>
-                  </div>
+                  </a>
                   <!-- Hover for card img  -->
                   <button class="card-hover button-hover4 trans1">
                      <svg class="card-hover__img trans" width="26" height="24" viewBox="0 0 32 29" fill="none"
@@ -435,7 +435,7 @@
                      <span class="card-hover__text trans">Add to Cart</span>
                   </button>
                   <!-- Hover for card img END -->
-               </a>
+               </div>
             </article>
             <!-- Pagination  -->
             <ul class="product-pagination__list">
